force-app/main/default/objects/grant__c/grant__c.object-meta.xml
<CustomObject>
    <label>Enrollment Funder</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0000}</displayFormat>
        <label>Enrollment Funder #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollment Funders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>