force-app/main/default/objects/grant__c/fields/Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enrollment__c</fullName>
    <label>Enrollment</label>
    <referenceTo>SFDC_Enrollment__c</referenceTo>
    <relationshipLabel>Enrollment Funders</relationshipLabel>
    <relationshipName>Enrollment_Funders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>