force-app/main/default/objects/grant__c/fields/Field_for_Edit_Link__c.field-meta.xml
<CustomField>
    <fullName>Field_for_Edit_Link__c</fullName>
    <label>Field for Edit Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>