force-app/main/default/objects/grant__c/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <formula>Enrollment__r.Contact__c &amp; Funder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identifier</label>
    <type>Text</type>
</CustomField>